kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: solar-system
  namespace: _{_NAMESPACE_}_
spec:
    rules:
    - host: solar-system-_{_NAMESPACE_}_._{_INGRESS_IP_}_.nip.io
      http:
        paths:
        - backend:
            service:
              name: solar-system
              port:
                number: 3000
          path: /
          pathType: Prefix
    ######### Uncomment the below section to enable TLS using cert-manager and Let's Encrypt
    # tls:
    # - hosts:
    #   - solar-system-_{_NAMESPACE_}_._{_INGRESS_IP_}_.nip.io
    #   secretName: ingress-local-tls
